# supernova

./: .gitignore  README.md  db_tables.txt  package.json  pnpm-lock.yaml  pyproject.toml  supernova_backup.sql  truncate_all_tables.sql  turbo.json
apps/backend/: .env.example  alembic.ini  package.json  pyproject.toml  requirements.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20250311_204027_3c5c7bf53f94_initial_schema.py  20250311_205052_5cb7c3ff240e_update_relationships_and_fix_circular_.py  20250311_205247_b82ee886c358_update_relationship_definitions.py  20250311_205326_adc424a900b8_update_course_relationship.py  20250311_205412_1f0df90c714e_simplify_relationships.py  20250311_210703_1b86f4a88bf0_consolidate_status_fields.py  20250311_211112_fada5296b4a7_fix_relationship_viewonly_flags.py  20250311_211300_33100efeba92_make_relationships_viewonly.py  20250311_211408_b7a489d06402_make_courseversion_content_viewonly.py  20250311_211547_65a08390d987_update_relationship_back_populates_and_.py  20250311_211709_409ce18b6213_make_child_relationships_viewonly.py  20250311_211757_6c2714f473cc_make_enrollment_relationships_viewonly.py  20250311_212435_1b3f33251b21_update_schema_relationships.py  20250311_213131_dc3b44b5bb96_reorganize_schemas.py  20250312_073100_e1951340c884_update_user_table_to_remove_keys_.py  20250318_143726_ffb9a7a41f30_update_course_model_nullable_fields.py  20250319_123759_282a7ba7357b_change_lesson_and_module_name_to_title.py
apps/backend/app/: main.py
apps/backend/app/api/dependencies/: admin.py  auth.py  db.py  pagination.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/endpoints/: admin.py  auth.py  courses.py  enrollments.py  (+6 more)
apps/backend/app/core/: config.py  exception_handlers.py  exceptions.py  middleware.py
apps/backend/app/db/: base.py  base_class.py  init_db.py  session.py
apps/backend/app/models/: __init__.py  base_model.py  course.py  course_version.py  enrollment.py  enums.py  lesson.py  mock_data.pgsql  module.py  progress.py  purchase.py  review.py  school.py  scoped_models.py  user.py
apps/backend/app/schemas/: __init__.py  auth.py  course.py  course_version.py  enrollment.py  lesson.py  module.py  progress.py  purchase.py  review.py  school.py  shared.py  user.py
apps/backend/app/scripts/: base.py  create_super_admin.py  manage_school.py  manage_users.py  test_user.py
apps/backend/app/security/: authentication.py  jwt.py  password.py
apps/backend/app/services/: admin.py  base.py  content.py  course.py  enrollment.py  lesson.py  module.py  purchase.py  review.py  school.py  user.py
apps/backend/app/utils/: common.py  validation.py
apps/backend/db_queries/: 1
(+222 files in other folders)
